Ajout de la section Recherche

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Reservia</title>
     </head>
     <body>
+
+    <!--En-tête -->
         <header>
             <div>
                 <h1>Reservia</h1>
@@ -23,6 +25,23 @@
                 <p>En plein centre ville ou en pleine nature</p>
             </div>
         </header>
+
+        <!-- Recherche -->
+        <section>
+            <!-- champs de saisie du nom de la ville --> <p>Rechercher</p><!-- Attention! Bouton non fonctionnel -->
+            <div>
+                <h4>Filtres</h4>
+                <ul>
+                    <li>Économique</li>
+                    <li>Familial</li>
+                    <li>Romantique</li>
+                    <li>Animaux autorisés</li>
+                </ul>
+            </div>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+        </section>
+
+        <!-- Hébergements -->
         <section>
             <div>
                 <h2 id="hebergements">Hébergements à Marseille</h2>
@@ -45,9 +64,9 @@
                 </div>
             </aside>
         </section>
-        <section>
 
-        </section>
+        <!-- Activités -->
+        <section>
             <h2 id="activites">Activités à Marseille</h2>
             <div>
                 <div>
@@ -61,6 +80,9 @@
                     <div>activité 6</div>
                 </div>
             </div>
+        </section>
+
+        <!-- Pied-de-page -->
         <footer>
             <div>
                 <h3>A propos</h3>
