correction liens footer

--- a/index.html
+++ b/index.html
@@ -89,24 +89,23 @@
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#"></a>Données et confidentialités</li>
+                    <li><a href="#"></a>Données et confidentialités</a></li>
                 </ul>
             </div>
             <div>
                 <h3>A propos</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
-                    <li><a href="#"></a>Soumettre votre hôtel</li>
+                    <li><a href="#"></a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div>
                 <h3>A propos</h3>
                 <ul>
-                    <li><a href="#"></a>Centre d'aide</li>
-                    <li><a href="#"></a>Nous contacter</li>
+                    <li><a href="#"></a>Centre d'aide</a></li>
+                    <li><a href="#"></a>Nous contacter</a></li>
                 </ul>
             </div>
-
         </footer>
     </body>
 </html>
