correction des titres footers

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 </ul>
             </div>
             <div>
-                <h3>A propos</h3>
+                <h3>Nos hébergements</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#"></a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div>
-                <h3>A propos</h3>
+                <h3>Assistance</h3>
                 <ul>
                     <li><a href="#"></a>Centre d'aide</a></li>
                     <li><a href="#"></a>Nous contacter</a></li>
