--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#"></a>Données et confidentialités</a></li>
+                    <li><a href="#">Données et confidentialités</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Nos hébergements</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
-                    <li><a href="#"></a>Soumettre votre hôtel</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div>
                 <h3>Assistance</h3>
                 <ul>
-                    <li><a href="#"></a>Centre d'aide</a></li>
-                    <li><a href="#"></a>Nous contacter</a></li>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
                 </ul>
             </div>
         </footer>
