--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Recherche -->
         <section>
             <!-- champs de saisie du nom de la ville --> <p>Rechercher</p><!-- Attention! Bouton non fonctionnel -->
-            <div>
+            <div id="filtres">
                 <h4>Filtres</h4>
                 <ul>
                     <li>Économique</li>
@@ -89,7 +89,7 @@
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#">Données et confidentialités</a></li>
+                    <li><a href="#">git branchDonnées et confidentialités</a></li>
                 </ul>
             </div>
             <div>
