ajout du dossier logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!--En-tête -->
         <header>
             <div>
-                <h1>Reservia</h1>
+                <div id="logo>
+                    <img src="images/ logo/ Reservia@3x.png" alt="logo de Réservia" />
                 <nav>
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
