désactivation du champs VILLE

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>M</p>
                 <!-- Champs de saisie du nom de la ville -->
                 <p>
-                    <input type="text" name="ville" id="ville" placeholder="Ville" />
+                    <input type="text" name="ville" id="ville" placeholder="Ville" disabled /> <!-- ATTENTION, ce champs de saisie est désactivé avec l'attribut disabled -->
                 </p>
                 
                 <!-- Bouton non fonctionnel de recherche -->
