Suppression du dossier fonts + CSS conteneur_head

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--En-tête -->
         <header>
-            <div>
+            <div class="conteneur_head">
                 <div id="logo">
                     <img src="images/logo/Reservia@3x.png" alt="logo de Réservia" />
                 </div>
@@ -23,7 +23,7 @@
                     </ul>
                 </nav>
                 <!-- attention, mettre la bonne balise pour s'inscrire -->
-                <p><a id="inscription" href="#">S'inscrire</a></p>
+                <p id="inscription"><a href="#">S'inscrire</a></p>
             </div>
             <div>
                 <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
