Ajout Grid pour Activités + media pour header et footer

--- a/index.html
+++ b/index.html
@@ -73,30 +73,23 @@
 
         <!-- Hébergements -->
         <section class="resultats">
-            <div class="hebergements">
+            <div id="hebergements">
                 <h2>Hébergements à Marseille</h2>
-                <div class="ensemble_cartes">
-                    <div class="carte">
-                        <a href="https:\\www.google.fr">
-                            <img src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
-                            <h3>Auberge la Cannebière</h3>
-                            <p>Nuit à partir de 25€</p>
-                            <p>4ETOILES</p>
-                        </a>
-                    </div>
+                    <div class="ensemble-cartes">
                         <div class="carte">
                             <a href="https:\\www.google.fr">
-                                <img src="#" alt="#" />
-                                <h3>Hôtel du port</h3>
-                                <p>Nuit à partir de 52€</p>
-                                <p>5ETOILES</p>
+                                <div class="carte__img">
+                                    <img id="image" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
+                                </div>
+                                <div class="carte__infos">
+                                    <h3>Auberge la Cannebière</h3>
+                                    <p>Nuit à partir de 25€</p>
+                                    <p>4ETOILES</p>
+                                </div>
                             </a>
                         </div>
-                        <div class="carte"></div>
-                        <div class="carte"></div>
-                        <div class="carte"></div>
-                        <div class="carte"></div>
-                </div>
+                        
+                    </div>    
                 <p>Afficher plus</p>
             </div>
             <aside>
@@ -110,20 +103,14 @@
         </section>
 
         <!-- Activités -->
-        <section>
+        <section id="activites">
             <h2>Activités à Marseille</h2>
-            <div>
-                <div>
-                    <div>activité 1</div>
-                    <div>activité 2</div>
-                    <div>activité 3</div>
-                </div>
-                <div>
-                    <div>activité 4</div>
-                    <div>activité 5</div>
-                    <div>activité 6</div>
-                </div>
-            </div>
+            <div id="one">activité 1</div>
+            <div id="two">activité 2</div>
+            <div id="three">activité 3</div>
+            <div id="four">activité 4</div>
+            <div id="five">activité 5</div>
+            <div id="six">activité 6</div>
         </section>
 
         <!-- Pied-de-page -->
@@ -133,7 +120,7 @@
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#">git branchDonnées et confidentialités</a></li>
+                    <li><a href="#">Données et confidentialités</a></li>
                 </ul>
             </div>
             <div>
