--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait en dessous du titre de la page lors d'une recherche sur moteur de recherche -->
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
-        <link rel="stylesheet" type="text/css" href="css_mobile.css" /> <!-- Faut-il ajouter type ??? -->
+        <link rel="stylesheet" type="text/css" href="style.css" /> <!-- Faut-il ajouter type ??? -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
