Révision avant mentorat

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
                 <!-- Bouton non fonctionnel de recherche -->
                 <p>
-                    <button type="submit" value="Rechercher" class="form__btn" disabled >Rechercher</button> <!-- ATTENTION, ce bouton est désactivé avec l'attribut disabled -->
+                    <button type="submit" value="Rechercher" class="form__btn" >Rechercher</button>
                 </p>
 
             </form>
@@ -77,7 +77,7 @@
                 <h2>Hébergements à Marseille</h2>
                     <div class="ensemble-cartes">
                         <div class="carte">
-                            <a href="https:\\www.google.fr">
+                            <a href="https://www.google.fr">
                                 <div class="carte__img">
                                     <img id="image" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
                                 </div>
