--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div id="hebergements">
                 <h2>Hébergements à Marseille</h2>
                     <div class="ensemble-cartes">
-                        <div class="carte">
+                        <div class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
                             <a href="https://www.google.fr">
                                 <div class="carte__img">
                                     <img id="image" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
