--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <div class="carte__infos">
                                     <h3>Auberge la Cannebière</h3>
                                     <p>Nuit à partir de <em class="carte-prix">25</em><em class="carte-devise">€</em></p>
-                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--grey"></i></p>
+                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
                                 </div>
                             </a>
                         </div>
@@ -122,7 +122,7 @@
                                 <div class="carte__infos">
                                     <h3>Hôtel les mouettes</h3>
                                     <p>Nuit à partir de 76<em class="carte-devise">€</em></p>
-                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--grey"></i></p>
+                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
                                 </div>
                             </a>
                         </div>
@@ -134,7 +134,7 @@
                                 <div class="carte__infos">
                                     <h3>Hôtel de la mer</h3>
                                     <p>Nuit à partir de 46<em class="carte-devise">€</em></p>
-                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--grey"></i><i class="fas fa-star star--grey"></i></p>
+                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i><i class="fas fa-star star--gray"></i></p>
                                 </div>
                             </a>
                         </div>
@@ -146,7 +146,7 @@
                                 <div class="carte__infos">
                                     <h3>Auberge Le Panier</h3>
                                     <p>Nuit à partir de <em class="carte-prix">23</em><em class="carte-devise">€</em></p>
-                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--grey"></i></p>
+                                    <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
                                 </div>
                             </a>
                         </div>
@@ -165,13 +165,48 @@
                     </div>    
                 <p>Afficher plus</p>
             </div>
-            <aside>
-                <h2>Les plus populaires</h2>
-                <i class="fas fa-chart-line fa-lg fa-fw"></i>
-                <div class="populaires">
-                    <div>carte_bis 1</div>
-                    <div>carte_bis 2</div>
-                    <div>carte_bis 3</div>
+            <aside class="populaires">
+                <div class="populaires__head">
+                    <h2>Les plus populaires</h2>
+                    <i class="fas fa-chart-line fa-lg fa-fw"></i>
+                </div>
+                <div class="populaires__conteneur">
+                    <div class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
+                        <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                            <div class="carte__img">
+                                <img class="image" src="images/hebergements/hotel_le_soleil_du_matin.jpg" alt="Visitez le site de Hôtel Le soleil du matin" />
+                            </div>
+                            <div class="carte__infos">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de 128<em class="carte-devise">€</em></p>
+                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i></p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
+                        <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                            <div class="carte__img">
+                                <img class="image" src="images/hebergements/au_coeur_de_l_eau_chambres_d_hotes.jpg" alt="Visitez le site de Au coeur de l'eau Chambres d'hôtes" />
+                            </div>
+                            <div class="carte__infos">
+                                <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
+                                <p>Nuit à partir de 71<em class="carte-devise">€</em></p>
+                                <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                            </div>
+                        </a>
+                    </div>       
+                    <div class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
+                        <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                            <div class="carte__img">
+                                <img class="image" src="images/hebergements/hotel_tout_bleu_et_blanc.jpg" alt="Visitez le site de Hôtel Tout bleu et Blanc" />
+                            </div>
+                            <div class="carte__infos">
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de 68<em class="carte-devise">€</em></p>
+                                <p><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                            </div>
+                        </a>
+                    </div>       
                 </div>
             </aside>
         </section>
