--- a/index.html
+++ b/index.html
@@ -196,56 +196,56 @@
         <!-- Activités -->
         <section id="activites">
             <h2>Activités à Marseille</h2>
-
-            <div id="one" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/vieux_port.jpg" alt="Visitez le site du Vieux Port" />
-                    </div>
-                    <h3>Vieux Port</h3>
-                </a>
+            <div class="activites__conteneur">
+                <div class="cadre" id="one">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/vieux_port.jpg" alt="Visitez le site du Vieux Port" />
+                        </div>
+                        <h3>Vieux Port</h3>
+                    </a>
+                </div>
+                <div class="cadre" id="two">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/fort_de_pomegues.jpg" alt="Visitez le site de Fort de Pomègues" />
+                        </div>
+                        <h3>Fort de Pomègues</h3>
+                    </a>
+                </div>
+                <div class="cadre" id="three">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/iles_du_frioul.jpg" alt="Visitez le site de Îles du Frioul" />
+                        </div>
+                        <h3>Îles du Frioul</h3>
+                    </a>
+                </div>
+                <div class="cadre" id="four">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/parc_national_des_calanques.jpg" alt="Visitez le site du Parc National des Calanques" />
+                        </div>
+                        <h3>Parc National des Calanques</h3>
+                    </a>
+                </div>
+                <div class="cadre" id="five">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/notre_dame_de_la_garde.jpg" alt="Visitez le site de Notre-Dame-de-la-Garde" />
+                        </div>
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </a>
+                </div>
+                <div class="cadre" id="six">
+                    <a class="carte" href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
+                        <div class="carte__img">
+                            <img class="image" src="images/activites/parc_longchamp.jpg" alt="Visitez le site du Parc Longchamp" />
+                        </div>
+                        <h3>Parc Longchamp</h3>
+                    </a>
+                </div>
             </div>
-            <div id="two" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/fort_de_pomegues.jpg" alt="Visitez le site de Fort de Pomègues" />
-                    </div>
-                    <h3>Port de Pomègues</h3>
-                </a>
-            </div>
-            <div id="three" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/iles_du_frioul.jpg" alt="Visitez le site de Îles du Frioul" />
-                    </div>
-                    <h3>Îles du Frioul</h3>
-                </a>
-            </div>
-            <div id="four" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/parc_national_des_calanques.jpg" alt="Visitez le site du Parc National des Calanques" />
-                    </div>
-                    <h3>Parc National des Calanques</h3>
-                </a>
-            </div>
-            <div id="five" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/notre_dame_de_la_garde.jpg" alt="Visitez le site de Notre-Dame-de-la-Garde" />
-                    </div>
-                    <h3>Notre-Dame-de-la-Garde</h3>
-                </a>
-            </div>
-            <div id="six" class="carte"> <!-- Le lien étant dans la div, pour le moment toute la carte n'est pas cliquable, à moins d'ajuster la taille de la div aux éléments -->
-                <a href="https://www.google.fr"> <!-- Pour voir si ça fonctionne. A supprimer -->
-                    <div class="carte__img">
-                        <img class="image" src="images/activites/parc_longchamp.jpg" alt="Visitez le site du Parc Longchamp" />
-                    </div>
-                    <h3>Parc Longchamp</h3>
-                </a>
-            </div>
-            
         </section>
 
         <!-- Pied-de-page -->
