positionnement + design responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 600px)" href="style_iphone8.css" />
-        <link rel="stylesheet" type="text/css" media=" sceen and (min-width: 601px)" href="style_deskyop.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 601px)" href="style_desktop.css" />
         
         <!---
         <link rel="stylesheet" type="text/css" href="style_base_mobile.css" />
@@ -35,11 +35,11 @@
 
         <!--En-tête -->
             <header>
-                <div class="conteneur_head">
+                <div class="header__top">
                     <div id="logo">
                         <img src="images/logo/reservia.svg" alt="logo de Reservia" />
                     </div>
-                    <nav class="nav">
+                    <nav>
                         <ul>
                             <li><a href="#hebergements" class="nav__link">Hébergements</a></li>
                             <li><a href="#activites" class="nav__link">Activités</a></li>
