--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait en dessous du titre de la page lors d'une recherche sur moteur de recherche -->
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
-        <link rel="stylesheet" type="text/css" media="screen and (max-width: 600px)" href="style_iphone8.css" />
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 601px)" href="style_desktop.css" />
+        <link rel="stylesheet" type="text/css" href="style_iphone8.css" />
         
         <!---
         <link rel="stylesheet" type="text/css" href="style_base_mobile.css" />
@@ -222,7 +221,7 @@
                 <h2>Activités à Marseille</h2>
                 <div class="activites__conteneur">
                     <div class="cadre" id="one">
-                        <a class="carte" href="#"> 
+                        <a class="carte carte--activite" href="#"> 
                             <div class="carte__img">
                                 <img class="image" src="images/activites/vieux_port.jpg" alt="Visitez le site du Vieux Port" />
                             </div>
@@ -230,7 +229,7 @@
                         </a>
                     </div>
                     <div class="cadre" id="two">
-                        <a class="carte" href="#">
+                        <a class="carte carte--activite" href="#">
                             <div class="carte__img">
                                 <img class="image" src="images/activites/fort_de_pomegues.jpg" alt="Visitez le site de Fort de Pomègues" />
                             </div>
@@ -238,7 +237,7 @@
                         </a>
                     </div>
                     <div class="cadre" id="three">
-                        <a class="carte" href="#">
+                        <a class="carte carte--activite" href="#">
                             <div class="carte__img">
                                 <img class="image" src="images/activites/iles_du_frioul.jpg" alt="Visitez le site de Îles du Frioul" />
                             </div>
@@ -246,7 +245,7 @@
                         </a>
                     </div>
                     <div class="cadre" id="four">
-                        <a class="carte" href="#">
+                        <a class="carte carte--activite" href="#">
                             <div class="carte__img">
                                 <img class="image" src="images/activites/parc_national_des_calanques.jpg" alt="Visitez le site du Parc National des Calanques" />
                             </div>
@@ -254,7 +253,7 @@
                         </a>
                     </div>
                     <div class="cadre" id="five">
-                        <a class="carte" href="#"> 
+                        <a class="carte carte--activite" href="#"> 
                             <div class="carte__img">
                                 <img class="image" src="images/activites/notre_dame_de_la_garde.jpg" alt="Visitez le site de Notre-Dame-de-la-Garde" />
                             </div>
@@ -262,7 +261,7 @@
                         </a>
                     </div>
                     <div class="cadre" id="six">
-                        <a class="carte" href="#">
+                        <a class="carte carte--activite" href="#">
                             <div class="carte__img">
                                 <img class="image" src="images/activites/parc_longchamp.jpg" alt="Visitez le site du Parc Longchamp" />
                             </div>
