Avancées sur le Responsive Design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait en dessous du titre de la page lors d'une recherche sur moteur de recherche -->
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
-        <link rel="stylesheet" type="text/css" href="style_iphone8.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="style_iphone8.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="style_desktop.css" />
         
         <!---
         <link rel="stylesheet" type="text/css" href="style_base_mobile.css" />
