--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <!-- Conteneur regroupant toutes les cartes d'hébergements trouvées -->
                     <div class="hebergements__conteneur">
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
+                            <img class="carte__img" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
                             <div class="carte__infos">
                                 <h3>Auberge la Cannebière</h3>
                                 <p>Nuit à partir de <em class="carte-prix">25</em><em class="carte-devise">€</em></p>
@@ -114,7 +114,7 @@
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/hotel_du_port.png" alt="Visitez le site de Hôtel du port" />
+                            <img class="carte__img" src="images/hebergements/hotel_du_port.png" alt="Visitez le site de Hôtel du port" />
                             <div class="carte__infos">
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52<em class="carte-devise">€</em></p>
@@ -122,7 +122,7 @@
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/hotel_les_mouettes.png" alt="Visitez le site de Hôtel les mouettes" />
+                            <img class="carte__img" src="images/hebergements/hotel_les_mouettes.png" alt="Visitez le site de Hôtel les mouettes" />
                             <div class="carte__infos">
                                 <h3>Hôtel les mouettes</h3>
                                 <p>Nuit à partir de 76<em class="carte-devise">€</em></p>
@@ -130,7 +130,7 @@
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/hotel_de_la_mer.png" alt="Visitez le site de Hôtel de la mer" />
+                            <img class="carte__img" src="images/hebergements/hotel_de_la_mer.png" alt="Visitez le site de Hôtel de la mer" />
                             <div class="carte__infos">
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46<em class="carte-devise">€</em></p>
@@ -138,7 +138,7 @@
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/auberge_le_panier.png" alt="Visitez le site de Auberge Le Panier" />
+                            <img class="carte__img" src="images/hebergements/auberge_le_panier.png" alt="Visitez le site de Auberge Le Panier" />
                             <div class="carte__infos">
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <em class="carte-prix">23</em><em class="carte-devise">€</em></p>
@@ -146,7 +146,7 @@
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="image" src="images/hebergements/hotel_chez_amina.png" alt="Visitez le site de Hôtel chez Amina" />
+                            <img class="carte__img" src="images/hebergements/hotel_chez_amina.png" alt="Visitez le site de Hôtel chez Amina" />
                             <div class="carte__infos">
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96<em class="carte-devise">€</em></p>
@@ -169,7 +169,7 @@
                     <!-- Conteneur regroupant les hébergements les plus populaires de la ville ciblée -->
                     <div class="populaires__conteneur">
                         <a class="carte carte--populaire" href="#">
-                            <img class="image" src="images/hebergements/hotel_le_soleil_du_matin.jpg" alt="Visitez le site de Hôtel Le soleil du matin" />
+                            <img class="carte__img" src="images/hebergements/hotel_le_soleil_du_matin.jpg" alt="Visitez le site de Hôtel Le soleil du matin" />
                             <div class="carte__infos">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p class="tarif">Nuit à partir de 128<em class="carte-devise">€</em></p>
@@ -177,7 +177,7 @@
                             </div>
                         </a>
                         <a class="carte carte--populaire" href="#">
-                            <img class="image" src="images/hebergements/au_coeur_de_l_eau_chambres_d_hotes.jpg" alt="Visitez le site de Au coeur de l'eau Chambres d'hôtes" />
+                            <img class="carte__img" src="images/hebergements/au_coeur_de_l_eau_chambres_d_hotes.jpg" alt="Visitez le site de Au coeur de l'eau Chambres d'hôtes" />
                             <div class="carte__infos">
                                 <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
                                 <p class="tarif">Nuit à partir de 71<em class="carte-devise">€</em></p>
@@ -185,7 +185,7 @@
                             </div>
                         </a>
                         <a class="carte--populaire carte" href="#">
-                            <img class="image" src="images/hebergements/hotel_tout_bleu_et_blanc.jpg" alt="Visitez le site de Hôtel Tout bleu et Blanc" />
+                            <img class="carte__img" src="images/hebergements/hotel_tout_bleu_et_blanc.jpg" alt="Visitez le site de Hôtel Tout bleu et Blanc" />
                             <div class="carte__infos">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p class="tarif">Nuit à partir de 68<em class="carte-devise">€</em></p>
@@ -201,27 +201,27 @@
                 <h2>Activités à Marseille</h2>
                 <div class="activites__conteneur">
                     <a id="one" class="carte carte--activite" href="#"> 
-                        <img class="image" src="images/activites/vieux_port.jpg" alt="Visitez le site du Vieux Port" />
+                        <img class="carte__img" src="images/activites/vieux_port.jpg" alt="Visitez le site du Vieux Port" />
                         <h3>Vieux Port</h3>
                     </a>
                     <a id="two" class="carte carte--activite" href="#">
-                        <img class="image" src="images/activites/fort_de_pomegues.jpg" alt="Visitez le site de Fort de Pomègues" />
+                        <img class="carte__img" src="images/activites/fort_de_pomegues.jpg" alt="Visitez le site de Fort de Pomègues" />
                         <h3>Fort de Pomègues</h3>
                     </a>
                     <a id="three" class="carte carte--activite" href="#">
-                        <img class="image" src="images/activites/iles_du_frioul.jpg" alt="Visitez le site de Îles du Frioul" />
+                        <img class="carte__img" src="images/activites/iles_du_frioul.jpg" alt="Visitez le site de Îles du Frioul" />
                         <h3>Îles du Frioul</h3>
                     </a>
                     <a id="four" class="carte carte--activite" href="#">
-                        <img class="image" src="images/activites/parc_national_des_calanques.jpg" alt="Visitez le site du Parc National des Calanques" />
+                        <img class="carte__img" src="images/activites/parc_national_des_calanques.jpg" alt="Visitez le site du Parc National des Calanques" />
                         <h3>Parc National des Calanques</h3>
                     </a>
                     <a id="five" class="carte carte--activite" href="#"> 
-                        <img class="image" src="images/activites/notre_dame_de_la_garde.jpg" alt="Visitez le site de Notre-Dame-de-la-Garde" />
+                        <img class="carte__img" src="images/activites/notre_dame_de_la_garde.jpg" alt="Visitez le site de Notre-Dame-de-la-Garde" />
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </a>
                     <a id="six" class="carte carte--activite" href="#">
-                        <img class="image" src="images/activites/parc_longchamp.jpg" alt="Visitez le site du Parc Longchamp" />
+                        <img class="carte__img" src="images/activites/parc_longchamp.jpg" alt="Visitez le site du Parc Longchamp" />
                         <h3>Parc Longchamp</h3>
                     </a>
                 </div>
