Modif CSS footer

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
             <!-- Pied-de-page -->
             <footer>
-                <div>
+                <div class="a_propos">
                     <h3>A propos</h3>
                     <ul>
                         <li><a href="#">Fonctionnement du site</a></li>
@@ -237,14 +237,14 @@
                         <li><a href="#">Données et confidentialités</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="nos_hebergements">
                     <h3>Nos hébergements</h3>
                     <ul>
                         <li><a href="#">Charte qualité</a></li>
                         <li><a href="#">Soumettre votre hôtel</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="assistance">
                     <h3>Assistance</h3>
                     <ul>
                         <li><a href="#">Centre d'aide</a></li>
