--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait en dessous du titre de la page lors d'une recherche sur moteur de recherche -->
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
-        <link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="style_iphone8.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <!--<link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="style_iphone8.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="style_desktop.css" />
-      
+        -->
         <!-- Lien pour la font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -110,7 +111,7 @@
                             <div class="carte__infos">
                                 <h3>Auberge la Cannebière</h3>
                                 <p>Nuit à partir de <em class="carte-prix">25</em><em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                         <a class="carte" href="#">
@@ -118,15 +119,15 @@
                             <div class="carte__infos">
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i></p>
                             </div>
                         </a>
                         <a class="carte" href="#">
-                            <img class="carte__img" src="images/hebergements/hotel_les_mouettes.png" alt="Visitez le site de Hôtel les mouettes" />
+                            <img class="carte__img" src="images/hebergements/hotel_les_mouettes.png" alt="Visitez le site de Hôtel Les mouettes" />
                             <div class="carte__infos">
-                                <h3>Hôtel les mouettes</h3>
+                                <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de 76<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                         <a class="carte" href="#">
@@ -134,7 +135,7 @@
                             <div class="carte__infos">
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                         <a class="carte" href="#">
@@ -142,7 +143,7 @@
                             <div class="carte__infos">
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <em class="carte-prix">23</em><em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                         <a class="carte" href="#">
@@ -150,7 +151,7 @@
                             <div class="carte__infos">
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i></p>
                             </div>
                         </a>                        
                     </div>    
@@ -173,7 +174,7 @@
                             <div class="carte__infos">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p class="tarif">Nuit à partir de 128<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i></p>
                             </div>
                         </a>
                         <a class="carte carte--populaire" href="#">
@@ -181,7 +182,7 @@
                             <div class="carte__infos">
                                 <h3>Au coeur de l'eau<br />Chambres d'hôtes</h3>
                                 <p class="tarif">Nuit à partir de 71<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                         <a class="carte--populaire carte" href="#">
@@ -189,7 +190,7 @@
                             <div class="carte__infos">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p class="tarif">Nuit à partir de 68<em class="carte-devise">€</em></p>
-                                <p class="etoiles"><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--blue"></i><i class="fas fa-star star--gray"></i></p>
+                                <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
                     </div>
