Réglages Footer, form__field et les filtres, modif container, organisation CSS,

--- a/index.html
+++ b/index.html
@@ -227,9 +227,11 @@
                     </a>
                 </div>
             </section>
-
-            <!-- Pied-de-page -->
-            <footer>
+        </div><!-- Fermeture du conteneur global -->
+        
+        <!-- Pied-de-page -->
+        <footer>
+            <div class="footer__conteneur">
                 <div class="a_propos">
                     <h3>A propos</h3>
                     <ul>
@@ -252,8 +254,8 @@
                         <li><a href="#">Nous contacter</a></li>
                     </ul>
                 </div>
-            </footer>
+            </div>
+        </footer>
         
-        </div><!-- Fermeture du conteneur global -->
     </body>
 </html>
