--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     
                     <!-- Champs de saisie du nom de la ville -->
                     <p class="p__field">
-                        <input type="search" name="ville" class="form__field" placeholder="Ville, Pays" /> 
+                        <input type="search" name="ville" class="form__field" placeholder="Marseille, France" /> 
                     </p>
                     
                     <!-- Bouton non fonctionnel de recherche -->
