--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait en dessous du titre de la page lors d'une recherche sur moteur de recherche -->
         
         <!-- Liens vers le fichier CSS et, le cas-échéant, les sites d'icônes (icone qui apparait dans la fenêtre, à côté du titre de la page)-->
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <!--<link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="style_iphone8.css" />
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="style_desktop.css" />
-        -->
+       <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+       <link rel="stylesheet" type="text/css" href="style_de_base.css" />
+       <link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="767.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="768.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px) and (max-width: 1024px)" href="768_1023.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 1023px)" href="1023.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px)" href="1024.css" />
+
         <!-- Lien pour la font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
