Regroupement CSS après vérifications des doublons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <link rel="stylesheet" type="text/css" href="style_de_base.css" />
        <link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="767.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="768.css" />
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px) and (max-width: 1024px)" href="768_1023.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px) and (max-width: 1023px)" href="768_1023.css" />
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1023px)" href="1023.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px)" href="1024.css" />
 
@@ -110,7 +110,7 @@
 
                     <!-- Conteneur regroupant toutes les cartes d'hébergements trouvées -->
                     <div class="hebergements__conteneur">
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/auberge_la_cannebiere.png" alt="Visitez le site de Auberge La Cannebière" />
                             <div class="carte__infos">
                                 <h3>Auberge la Cannebière</h3>
@@ -118,7 +118,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/hotel_du_port.png" alt="Visitez le site de Hôtel du port" />
                             <div class="carte__infos">
                                 <h3>Hôtel du port</h3>
@@ -126,7 +126,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i></p>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/hotel_les_mouettes.png" alt="Visitez le site de Hôtel Les mouettes" />
                             <div class="carte__infos">
                                 <h3>Hôtel Les mouettes</h3>
@@ -134,7 +134,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/hotel_de_la_mer.png" alt="Visitez le site de Hôtel de la mer" />
                             <div class="carte__infos">
                                 <h3>Hôtel de la mer</h3>
@@ -142,7 +142,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/auberge_le_panier.png" alt="Visitez le site de Auberge Le Panier" />
                             <div class="carte__infos">
                                 <h3>Auberge Le Panier</h3>
@@ -150,7 +150,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte--hebergement carte" href="#">
                             <img class="carte__img" src="images/hebergements/hotel_chez_amina.png" alt="Visitez le site de Hôtel chez Amina" />
                             <div class="carte__infos">
                                 <h3>Hôtel chez Amina</h3>
@@ -189,7 +189,7 @@
                                 <p class="etoiles"><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--couleur"></i><i class="fas fa-star star--estompe"></i></p>
                             </div>
                         </a>
-                        <a class="carte--populaire carte" href="#">
+                        <a class="carte carte--populaire " href="#">
                             <img class="carte__img" src="images/hebergements/hotel_tout_bleu_et_blanc.jpg" alt="Visitez le site de Hôtel Tout bleu et Blanc" />
                             <div class="carte__infos">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
