--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve" /> <!-- Description du site qui apparait sous le titre de la page lors d'une recherche sur moteur de recherche -->
        
         <!-- Lien vers le fichier style-->
-        <link rel="stylesheet" type="text/css" href="style_de_base.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
        
         <!-- Lien pour la font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
