test changement de nom fichier image por Github

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Partie haute de l'en-tête -->
                 <div class="header__top">
                     <div id="logo">
-                        <img src="images/logo/reservia.svg" alt="logo de Reservia" />
+                        <img src="images/logo/Reservia.svg" alt="logo de Reservia" />
                     </div>
                     <nav>
                         <ul>
