Mise à jour des commentaires + changement div hébergements en section hébergements

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <section class="resultats">
                 
                 <!-- Hébergements -->
-                <div id="hebergements">
+                <section id="hebergements">
 
                     <h2>Hébergements à Marseille</h2>
 
@@ -149,7 +149,7 @@
                     </div>    
 
                     <p class="plus">Afficher plus</p>
-                </div>
+                </section>
 
                 <!-- Les hébergements les plus populaires -->
                 <aside class="populaires">
